--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Institucion
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VxvZM/zfkdE2wLv2WPibAEFW3cu5Zvkidfx2exv2FSc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=instituto
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=pruebaproyectoinstitucion@gmail.com
+MAIL_PASSWORD=Institucion123456789*
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=pruebaproyectoinstitucion@gmail.com
+MAIL_FROM_NAME="Confirmación de la suscripción"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
